<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>runner_battery</name>
  <version>0.0.0</version>
  <description>X1201 battery fuel gauge publisher</description>
  <maintainer email="matti@todo.todo">matti</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
